# Competition

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  compile_commands.json
data/: camera.xml  input.xml  input_bin4.xml  input_old.xml  input_prodotto.xml
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: ImageProcessing.cpp  ImageProcessing.h  Scanner.cpp  Scanner.h  Scanner_orig.cpp  ScreenCapture.cpp  ScreenCapture.h  main.cpp
